# router/app.go
@@ -16,6 +16,8 @@ func Router() *gin.Engine {
 
 	r.GET("/index", service.GetIndex)
 	r.GET("/user/getUserList", service.GetUserList)
-
+	r.GET("/user/createUser", service.CreateUser)
+	r.GET("/user/deleteUser", service.DeleteUser)
+	r.POST("/user/updateUser", service.UpdateUser)
 	return r
 }
